--- a/src/library.html
+++ b/src/library.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Films</title>
+    <title>Library</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,11 +17,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/header-in.html"></include>
-    <main class="container" id="index-home"></main>
+    <include src="./partials/header-li.html"></include>
+    <main class="container" id="library"></main>
     <include src="./partials/footer.html"></include>
-    <script type="module" src="./index.js"></script>
   </body>
 </html>
