--- a/src/library.html
+++ b/src/library.html
@@ -20,5 +20,6 @@
     <include src="./partials/header-li.html"></include>
     <main class="container" id="library"></main>
     <include src="./partials/footer.html"></include>
+    <script type="module" src="./library.js"></script>
   </body>
 </html>
