--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header-in.html"></include>
     <main class="container" id="index-home"></main>
+    <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
