--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/header-in.html"></include>
     <main class="container" id="index-home"></main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/film-modal.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
