--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     <main class="container" id="index-home"></main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/film-modal.html"></include>
+    <include src="./fetch-movie.js"></include>
+    <include src="./modal-film.js"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
