--- a/src/library.html
+++ b/src/library.html
@@ -18,7 +18,9 @@
   </head>
   <body>
     <include src="./partials/header-li.html"></include>
-    <main class="container" id="library"></main>
+    <main class="container" id="library">
+      <include src="./partials/loader.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
     <script type="module" src="./library.js"></script>
   </body>
