main changes(markup, styles, images)

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -20,6 +26,7 @@
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header-in.html"></include>
     <main class="container" id="index-home"></main>
+    <include src="./partials/modal-team.html"></include>
     <include src="./partials/footer.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
