--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
     <main class="container" id="index-home">
       <include src="./partials/loader.html"></include>
       <include src="./partials/gallery.html"></include>
+      <include src="./partials/pagination.html"></include>
+
       <include src="./partials/film-modal.html"></include>
       <include src="./partials/modal-team.html"></include>
     </main>
