--- a/src/library.html
+++ b/src/library.html
@@ -21,6 +21,7 @@
     <main class="container" id="library">
       <include src="./partials/loader.html"></include>
       <include src="./partials/gallery.html"></include>
+      <include src="./partials/pagination.html"></include>
       <include src="./partials/modal-team.html"></include>
     </main>
 
