--- a/src/library.html
+++ b/src/library.html
@@ -20,6 +20,7 @@
     <include src="./partials/header-li.html"></include>
     <main class="container" id="library">
       <include src="./partials/loader.html"></include>
+      <ul class="library-list"></ul>
     </main>
     <include src="./partials/modal-team.html"></include>
     <include src="./partials/footer.html"></include>
