--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       <include src="./partials/film-modal.html"></include>
       <include src="./partials/modal-team.html"></include>
     </main>
-
+    <include src="./partials/back-to-top.html"></include>
     <include src="./partials/footer.html"></include>
 
     <script type="module" src="./index.js"></script>
