--- a/src/library.html
+++ b/src/library.html
@@ -19,7 +19,7 @@
     <include src="./partials/header-li.html"></include>
     <main class="container" id="library">
       <include src="./partials/loader.html"></include>
-      <ul class="library-list"></ul>
+      <ul class="library-list gallery"></ul>
       <include src="./partials/gallery.html"></include>
       <include src="./partials/pagination.html"></include>
       <include src="./partials/modal-team.html"></include>
