--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header-in.html"></include>
+    
     <main class="container" id="index-home">
+      <include src="./partials/darkOn.html"></include>
       <include src="./partials/loader.html"></include>
       <include src="./partials/gallery.html"></include>
       <include src="./partials/pagination.html"></include>
