--- a/src/library.html
+++ b/src/library.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <include src="./partials/header-li.html"></include>
+    <include src="./partials/darkOn.html"></include>
     <main class="container" id="library">
       <include src="./partials/loader.html"></include>
       <ul class="library-list"></ul>
