--- a/src/library.html
+++ b/src/library.html
@@ -17,19 +17,29 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
     <include src="./partials/header-li.html"></include>
-    <include src="./partials/darkOn.html"></include>
+
     <main class="container" id="library">
+      <include src="./partials/darkOn.html"></include>
       <include src="./partials/loader.html"></include>
       <ul class="library-list gallery"></ul>
       <include src="./partials/gallery.html"></include>
       <include src="./partials/pagination.html"></include>
+      <include src="./partials/film-modal.html"></include>
       <include src="./partials/modal-team.html"></include>
     </main>
-
+    <include src="./partials/back-to-top.html"></include>
     <include src="./partials/footer.html"></include>
 
     <script type="module" src="./library.js"></script>
