--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       content="upgrade-insecure-requests"
     />
     <title>Films</title>
-
+    <link rel="icon" href="./images/159582.svg" type="image/svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,7 +29,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header-in.html"></include>
-    
+
     <main class="container" id="index-home">
       <include src="./partials/darkOn.html"></include>
       <include src="./partials/loader.html"></include>
