--- a/src/library.html
+++ b/src/library.html
@@ -9,7 +9,7 @@
       content="upgrade-insecure-requests"
     />
     <title>Library</title>
-
+    <link rel="icon" href="./images/159582.svg" type="image/svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
